improve portfolio loading time

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
           <div class="align_objects">
             <div class="nav_logo">
-              <a href="" class="nav_link">
+              <a href="#" class="nav_link">
                 <h1>Mailar.</h1>
               </a>
             </div>
@@ -24,7 +24,7 @@
             <div class="nav_links">
               <ul class="unordered_list">
                 <li class="nav_item">
-                  <a href="" class="link active">Home</a>
+                  <a href="#" class="link active">Home</a>
                   <a href="#01" class="link">About</a>
                   <a href="#03" class="link">Work</a>
                   <a href="#04" class="link">Contact</a>
@@ -102,7 +102,7 @@
                   </div>
                 </div>
                 <div class="img">
-                  <img src="assets/img/airbnb-image.png" alt="project-picture" width="" />
+                  <img src="assets/img/airbnb-image.webp" alt="project-picture" />
                 </div>
               </div>
 
@@ -128,7 +128,7 @@
                   </div>
                 </div>
                 <div class="img">
-                  <img src="assets/img/portfolio-img.png" alt="project-picture" width="" />
+                  <img src="assets/img/portfolio-img.webp" alt="project-picture" />
                 </div>
               </div>
 
@@ -151,7 +151,7 @@
                   </div>
                 </div>
                 <div class="img">
-                  <img src="assets/img/weather-picture.png" alt="project-picture" width="" />
+                  <img src="assets/img/weather-picture.webp" alt="project-picture" />
                 </div>
               </div>
 
@@ -175,7 +175,7 @@
                   </div>
                 </div>
                 <div class="img">
-                  <img src="assets/img/todo-img.png" alt="project-picture" width="" />
+                  <img src="assets/img/todo-img.webp" alt="project-picture" />
                 </div>
               </div>
 
@@ -199,7 +199,7 @@
                   </div>
                 </div>
                 <div class="img">
-                  <img src="assets/img/movie-img.jpg" alt="project-picture" width="" />
+                  <img src="assets/img/movie-img.webp" alt="project-picture" />
                 </div>
               </div>
             </div>
@@ -235,13 +235,13 @@
 
               <div class="links">
                 <a href="https://www.linkedin.com/in/leokoivunen/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
+                  <i class="fab fa-linkedin-in">⠀</i>
                 </a>
                 <a href="https://github.com/devmailar" target="_blank">
-                  <i class="fab fa-github"></i>
+                  <i class="fab fa-github">⠀</i>
                 </a>
                 <a href="https://www.youtube.com/c/MailarYT/videos" target="_blank">
-                  <i class="fab fa-youtube"></i>
+                  <i class="fab fa-youtube">⠀</i>
                 </a>
               </div>
             </form>
@@ -249,6 +249,6 @@
         </footer>
       </section>
     </div>
-    <script src="assets/js/active.js"></script>
+    <script defer src="assets/js/active.js"></script>
   </body>
 </html>
