--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
       <main class="home">
         <div class="align_objects">
           <div class="text-container">
-            <h1>
+            <h2>
               Hey, I <span>build</span> interactive <span>web applications</span> that runs across <br />
               on different <span>platforms</span> & <span> devices</span>
-            </h1>
+            </h2>
           </div>
 
           <div class="btn-container">
@@ -52,6 +52,7 @@
       </main>
 
       <section>
+        <h3>-></h3>
         <aside class="about">
           <div class="align_objects">
             <div class="text-container" id="01">
@@ -84,7 +85,7 @@
             <div class="card-container">
               <div class="card">
                 <div class="info-container">
-                  <h1>Airbnb</h1>
+                  <h3>Airbnb</h3>
                   <p>Airbnb is a simple project that provides cards and other components. It main idea is to tell people about activies outside.</p>
 
                   <div class="flex">
@@ -108,7 +109,7 @@
 
               <div class="card">
                 <div class="info-container">
-                  <h1>Portfolio</h1>
+                  <h3>Portfolio</h3>
                   <p>
                     Portfolio - this is my current portfolio website for showing my top projects and information about me. It is made using
                     HTML/SCSS/JS.
@@ -134,7 +135,7 @@
 
               <div class="card">
                 <div class="info-container">
-                  <h1>Weather Tracker</h1>
+                  <h3>Weather Tracker</h3>
                   <p>
                     Simple weather tracker for tracking weather and events on the web. It includes weather API and functionality for tracking weather.
                   </p>
@@ -157,7 +158,7 @@
 
               <div class="card">
                 <div class="info-container">
-                  <h1>Todo List</h1>
+                  <h3>Todo List</h3>
                   <p>
                     Todo List is a simple list of tasks that you can add to your project structure. Then you can remove, edit or mark them completed
                     when you get them done.
@@ -181,7 +182,7 @@
 
               <div class="card">
                 <div class="info-container">
-                  <h1>MovieLand</h1>
+                  <h3>MovieLand</h3>
                   <p>
                     MovieLand is a bit like a website where you can see information and ratings for the latest movies. The project uses the
                     themoviedb.org API.
@@ -225,7 +226,7 @@
 
               <div class="field">
                 <label for="message">Message</label>
-                <textarea type="text" name="message" id="message" required></textarea>
+                <textarea name="message" id="message" required></textarea>
               </div>
 
               <div class="field" id="netlify">
