--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
 
               <div class="links">
                 <a href="https://www.linkedin.com/in/leokoivunen/" target="_blank">
-                  <i class="fab fa-linkedin-in">⠀</i>
+                  <i class="fab fa-linkedin-in"></i>
                 </a>
                 <a href="https://github.com/devmailar" target="_blank">
-                  <i class="fab fa-github">⠀</i>
+                  <i class="fab fa-github"></i>
                 </a>
                 <a href="https://www.youtube.com/c/MailarYT/videos" target="_blank">
-                  <i class="fab fa-youtube">⠀</i>
+                  <i class="fab fa-youtube"></i>
                 </a>
               </div>
             </form>
