--- a/index.html
+++ b/index.html
@@ -237,12 +237,18 @@
               <div class="links">
                 <a href="https://www.linkedin.com/in/leokoivunen/" target="_blank">
                   <i class="fab fa-linkedin-in"></i>
+                  <br>
+                  Linkedin
                 </a>
                 <a href="https://github.com/devmailar" target="_blank">
                   <i class="fab fa-github"></i>
+                  <br>
+                  Github
                 </a>
                 <a href="https://www.youtube.com/c/MailarYT/videos" target="_blank">
                   <i class="fab fa-youtube"></i>
+                  <br>
+                  Youtube
                 </a>
               </div>
             </form>
