--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Mailar</title>
     <link rel="stylesheet" href="assets/css/index.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
-    <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="assets/img/icons/favicon.png" />
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body>
     <div class="container">
