--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <link rel="stylesheet" href="assets/css/index.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
     <link rel="shortcut icon" type="image/png" href="assets/img/icons/icon-512x512.png" />
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
+    <div id="resume-container">
+      <a href="index.html">Close</a>
+      <iframe src="assets/pdf/cv.pdf" width="100%" height="700px"> </iframe>
+    </div>
+
     <div class="container">
       <header>
         <nav class="navbar">
@@ -47,7 +52,7 @@
 
           <div class="btn-container">
             <a href="#03" class="important" rel="noreferrer"> Work </a>
-            <a href="assets/pdf/cv.pdf" target="_blank" rel="noreferrer"> Resume </a>
+            <a href="#" id="resume"> Resume </a>
           </div>
         </div>
       </main>
@@ -238,17 +243,17 @@
               <div class="links">
                 <a href="https://www.linkedin.com/in/leokoivunen/" target="_blank">
                   <i class="fab fa-linkedin-in"></i>
-                  <br>
+                  <br />
                   Linkedin
                 </a>
                 <a href="https://github.com/devmailar" target="_blank">
                   <i class="fab fa-github"></i>
-                  <br>
+                  <br />
                   Github
                 </a>
                 <a href="https://www.youtube.com/c/MailarYT/videos" target="_blank">
                   <i class="fab fa-youtube"></i>
-                  <br>
+                  <br />
                   Youtube
                 </a>
               </div>
@@ -257,6 +262,6 @@
         </footer>
       </section>
     </div>
-    <script defer src="assets/js/active.js"></script>
+    <script defer src="assets/js/script.js"></script>
   </body>
 </html>
