--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Personal Portfolio Website" />
     <title>Mailar</title>
     <link rel="stylesheet" href="assets/css/animations/anim.index.css" />
+    <link rel="stylesheet" href="assets/css/fonts/fonts.index.css">
     <link rel="stylesheet" href="assets/css/index.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
     <link rel="shortcut icon" type="image/png" href="assets/img/icons/icon-512x512.png" />
@@ -238,7 +239,7 @@
               <div class="field" id="netlify">
                 <div data-netlify-recaptcha="true"></div>
               </div>
-              
+
               <input type="submit" value="submit" />
 
               <div class="links">
