Remove old javascript and create new way to open mobile menu & close it

--- a/index.html
+++ b/index.html
@@ -45,14 +45,13 @@
             </div>
           </div>
 
-          <div class="nav_menu">
+          <div class="nav_menu"  id="myLinks">
             <ul>
               <li>
                 <a href="#" class="link">Home</a>
                 <a href="#02" class="link">About</a>
                 <a href="#03" class="link">Work</a>
                 <a href="#04" class="link">Contact</a>
-                <a href="#05" class="hide" onclick="hideBurgermenu()">Close</a>
               </li>
             </ul>
           </div>
