Add new background and update code base

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="nav_menu"  id="myLinks">
             <ul>
               <li>
-                <a href="#" class="link">Home</a>
+                <a href="#01" class="link">Home</a>
                 <a href="#02" class="link">About</a>
                 <a href="#03" class="link">Work</a>
                 <a href="#04" class="link">Contact</a>
@@ -60,7 +60,7 @@
 
       <main class="home">
         <div class="align_objects">
-          <div class="text-container">
+          <div class="text-container" id="01">
             <h2>
               Hey, I <span>build</span> interactive <span>web applications</span> that runs across <br />
               on different <span>platforms</span> & <span> devices</span>
@@ -75,16 +75,19 @@
       </main>
 
       <section>
-        <aside class="about">
+        <aside class="about" id="02">
           <div class="align_objects">
-            <div class="text-container" id="02">
+            <div class="text-container" >
               <h2>About <span>Me</span></h2>
               <p>
-                I am a Front-end Developer with a positive attitude, I am studying software development in a vocational school. My passion is to
-                create interactive and full scalable web applications that are fast and simple and just operates well.
+                Hello, my name is <span>Mailar</span>. 
+                I am a <span>front-end web developer</span> with a <span>passion</span> for <span>creating</span> fast, scalable and responsive business web applications.
+
+                <br>
+                <br>
+
+                I have been working with multiple technologies like <span>HTML</span>, <span>CSS</span>, <span>JavaScript</span>, <span>React</span>, <span>SCSS</span>, and <span>Node.js</span>.
                 <br />
-                <br />
-                I use these skills listed below on daily basis. <br />
               </p>
             </div>
 
@@ -98,9 +101,9 @@
           </div>
         </aside>
 
-        <article class="work">
+        <article class="work" id="03">
           <div class="align_objects">
-            <div class="text-container" id="03">
+            <div class="text-container">
               <h2>My <span>Work</span></h2>
             </div>
 
